--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 
 
 .active {
-  background-color: #15803D !important; /* Green */
-  color: #fff !important;
+  background-color: #15803D;
+  color: #fff ;
 }
